[package]
name = "SbWiki"
version = "0.0.1"
authors = ["perillamint    <perillamint@gmail.com>",
           "Minacle        <minacle@live.com",
           "Hikarino_mukou <kuriyama@hibiya.moe>",
           "KBuild         <qwer7995@gmail.com>"]

[[bin]]

name = "sbwiki"
path = "src/main.rs"

[dependencies]

rustc-serialize = "0.3.12"
mime = "0.0.10"
iron = "0.1.16"
router = "0.0.10"
#liquid = "*"
chrono = "0.2.11"
url = "0.2.29"
log = "0.3.1"
toml = "0.1.20"

[dependencies.liquid]
git = "https://github.com/cobalt-org/liquid-rust.git"
